5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1667_2324.log
== TEST (2019-04-16 16:11:55) 
-- CODE:
n=input("nome: ")
if(nome.upper()=="MINERVA"):
	m=10.7654 * 0.347
	print(m)
if(nome.upper()=="BELATRIX"):
	s=10.674 * 1.789
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(nome.upper()=="MINERVA"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:08) 
-- CODE:
n=input("nome: ")
if(nome.upper()=="MINERVA"):
	m=10.7654 * 0.347
	print(m)
else:
	s=10.674 * 1.789
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(nome.upper()=="MINERVA"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:25) 
-- CODE:
n=input("nome: ")
if(nome.upper()=="MINERVA"):
	m=10.7654 * 0.347
	print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(nome.upper()=="MINERVA"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:21) 
-- CODE:
n=input("nome: ")
if(n.upper()=="MINERVA"):
	m=10.7654 * 0.347
	print(m)
if(n.upper()== "BELATRIX")	:
	s=10.674 * 1.789
	print(s)

-- OUTPUT:
19.095785999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:30) 
-- CODE:
n=input("nome: ")
if(n.upper()=="MINERVA"):
	m=10.7654 / 0.347
	print(m)
if(n.upper()== "BELATRIX")	:
	s=10.674 / 1.789
	print(s)

-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:31) 
-- CODE:
n=input("nome: ")
if(n.upper()=="MINERVA"):
	m=10.7654 / 0.3479
	print(m)
if(n.upper()== "BELATRIX")	:
	s=10.674 / 1.789
	print(s)

-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:22:20) 
-- CODE:
n=input("nome: ")
if(n.upper()=="MINERVA"):
	m=10.7654 / 0.3479
	print(m)
if(n.upper()== "BELATRIX")	:
	s=10.674 / 1.789
	print(s)

-- EXECUTION TIME:
0.163016
-- TEST CASE 1:
---- input:
BELATRIX
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
MINERVA
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
